--- a/app/src/main/res/layout/activity_detalles.xml
+++ b/app/src/main/res/layout/activity_detalles.xml
@@ -32,6 +32,7 @@
                 android:src="@android:drawable/ic_menu_myplaces"
                 android:scaleType="centerCrop" />
             <TextView
+                android:id="@+id/tvNombre"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -55,6 +56,7 @@
             <!--android:src="@drawable/tu_imagen"-->
             <!--android:scaleType="centerCrop"-->
             <TextView
+                android:id="@+id/tvNumero"
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -76,6 +78,7 @@
                 android:scaleType="centerCrop" />
 
             <TextView
+                android:id="@+id/tvProducto"
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -97,6 +100,7 @@
                 android:scaleType="centerCrop" />
 
             <TextView
+                android:id="@+id/tvUbicacion"
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -115,6 +119,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
+            android:id="@+id/ivLlamar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -122,6 +127,7 @@
             android:scaleType="fitCenter" />
 
         <ImageView
+            android:id="@+id/ivWsp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -129,6 +135,7 @@
             android:scaleType="fitCenter"/>
 
         <ImageView
+            android:id="@+id/Maps"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
